--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Bot Status</title>
+</head>
+<body>
+  <h2>goodchild md connected successfully ✅</h2>
+</body>
+</html>
